Room database migration and entity insert fixes

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,5 +70,8 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
+    // Optional -- Mockito framework
+    testImplementation 'org.mockito:mockito-core:2.28.2'
+
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 }
